@@ -1,3 +1,7 @@
+2005-07-15  Ben Elliston  <bje@au.ibm.com>
+
+	* regex.c (TRANSLATE): Cast rhs of ternary expression to char.
+
 2005-07-12  Ben Elliston  <bje@au.ibm.com>
 
 	* floatformat.c (floatformat_to_double): Add a comment about a
